# awtube_interfaces

./: CMakeLists.txt  package.xml
.github/actions/build_deb/: Dockerfile  action.yml  entrypoint.sh
.github/workflows/: main.yml
action/: JointPoint.action  PalletizerAction.action  PickAndPlaceSequence.action  Task.action
msg/: StringArray.msg
srv/: GetAttrAll.srv  GetBoxPoses.srv  GetTrajs.srv  LayerBoxes.srv  LayerTrajs.srv  MoveToFrame.srv  RobotStateService.srv  SetAttrAll.srv  SetDout.srv  SetTrajs.srv
