<?xml version="1.0"?>
<package format="2">
  <name>awtube_interfaces</name>
  <version>0.0.1</version>
  <description>Custom messages of awtube_interfaces</description>

  <maintainer email="michael.terzer@fraunhofer.it">Michael Terzer</maintainer>
  <maintainer email="valerio.magnago@fraunhofer.it">Valerio Magnago</maintainer>
  <license>TODO</license>
  <author email="michael.terzer@fraunhofer.it">Michael Terzer</author>
  <author email="valerio.magnago@fraunhofer.it">Valerio Magnago</author>

  <url type="website">https://www.fraunhofer.it/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
